grammaire_arbre.txt
<ARBRE_PHYLOGÉNÉTIQUE> ::= <NOM> | '(' <ARBRE_PHYLOGÉNÉTIQUE> <SEPARATION> ':' <SEPARATION><NOMBRE_A_VIRGULE>',' <SEPARATION> <ARBRE_PHYLOGÉNÉTIQUE> <SEPARATION> ':' <SEPARATION><NOMBRE_A_VIRGULE>')'
<NOMBRE_A_VIRGULE> ::= <PARTIE_ENTIÈRE>['.'<PARTIE_FRACTIONNAIRE> ]
<PARTIE_ENTIÈRE> ::= <ZÉRO> | <CHIFFRE_NON_NUL><SEQUENCE_DE_CHIFFRES>
<PARTIE_FRACTIONNAIRE> ::= <SEQUENCE_DE_CHIFFRE>
<CHIFFRE_NON_NUL> ::= '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
<SEQUENCE_DE_CHIFFRES> ::= <CHIFFRE>{<CHIFFRE>}
<CHIFFRE> ::= <ZÉRO> | <CHIFFRE_NON_NUL>
<ZÉRO> ::= '0'
<NOM> ::= <MOT>{'_'<MOT>} 
<MOT> ::= <LETTRE>{<LETTRE>}
<SEPARATION> ::= {<SEPARATEUR>}
<SEPARATEUR> ::= ' ' | '\t' | '\n' | '\r'
